Fixed double scrollbar defect

--- a/Pages/Work/styles/app/work-style.css
+++ b/Pages/Work/styles/app/work-style.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .project-preview-container {
@@ -36,7 +36,9 @@
     position: absolute;
     left: 100%;
     top: 0;
-    overflow: auto;
+
+    overflow-x: hidden;
+    overflow-y: auto;
 
     width: 100%;
     height: 100%;
